swagger: list secrets
